prepared some java solutions