@@ -1,17 +1,16 @@
-package year2023;
-
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 
-public class Day12 {
-    record SpringInformation(String springs, List<Integer> damagedSprings) {}
+public class Day12_1 {
+    record SpringInformation(String springs, List<Integer> damagedSprings) {
+    }
 
     private static Map<SpringInformation, Long> memoization = new HashMap<>();
 
     public static void main(String[] args) throws IOException {
-        //Part one
-        List<String> lines = Utils.readLines(Path.of("src/year2023/files/12.txt"));
+        List<String> lines = Files.readAllLines(Paths.get(args[0]));
         long result = 0;
 
         for (String line : lines) {
@@ -19,21 +18,6 @@ public class Day12 {
 
             String springs = splitLine[0];
             List<Integer> damagedSprings = getDamagedSprings(splitLine[1]);
-
-            result += getCombinations(springs, damagedSprings);
-        }
-
-        System.out.println(result);
-
-
-        //Part two
-        result = 0;
-
-        for (String line : lines) {
-            String[] splitLine = line.split(" ");
-
-            String springs = expandSprings(splitLine[0]);
-            List<Integer> damagedSprings = expandDamagedSprings(getDamagedSprings(splitLine[1]));
 
             result += getCombinations(springs, damagedSprings);
         }
@@ -47,26 +31,6 @@ public class Day12 {
                 .toList();
     }
 
-    private static String expandSprings(String springs) {
-        StringBuilder expandedSprings = new StringBuilder(springs);
-
-        for (int i = 0; i < 4; i++) {
-            expandedSprings.append("?").append(springs);
-        }
-
-        return expandedSprings.toString();
-    }
-
-    private static List<Integer> expandDamagedSprings(List<Integer> damagedSprings) {
-        List<Integer> expandedDamagedSprings = new ArrayList<>(damagedSprings);
-
-        for (int i = 0; i < 4; i++) {
-            expandedDamagedSprings.addAll(damagedSprings);
-        }
-
-        return expandedDamagedSprings;
-    }
-
     private static long getCombinations(String springs, List<Integer> damagedSprings) {
         long combinations = 0;
 
@@ -75,7 +39,7 @@ public class Day12 {
             return memoization.get(springInformation);
         }
 
-        //reached end
+        // reached end
         if (springs.isBlank()) {
             return damagedSprings.isEmpty() ? 1 : 0;
         }
@@ -109,7 +73,8 @@ public class Day12 {
                     break;
                 }
 
-                combinations = getCombinations(springs.substring(damaged+1), damagedSprings.subList(1, damagedSprings.size()));
+                combinations = getCombinations(springs.substring(damaged + 1),
+                        damagedSprings.subList(1, damagedSprings.size()));
             }
         }
 
