@@ -1,17 +1,13 @@
-package year2023;
-
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-public class Day6 {
+public class Day6_1 {
 
     public static void main(String[] args) throws IOException {
-        //Part one
-        List<String> lines = Utils.readLines(Path.of("src/year2023/files/06.txt"));
+        List<String> lines = Files.readAllLines(Paths.get(args[0]));
         List<Integer> times = new ArrayList<>();
         List<Integer> records = new ArrayList<>();
 
@@ -49,35 +45,5 @@ public class Day6 {
         }
 
         System.out.println(recordsBeat);
-
-
-        //Part two
-        long time = Long.parseLong(lines.get(0)
-                .replace("Time:", "")
-                .replaceAll(" ", ""));
-        long record = Long.parseLong(lines.get(1)
-                .replace("Distance:", "")
-                .replaceAll(" ", ""));
-
-        long minimumTime = 0;
-        long maximumTime = 0;
-
-        for (long i = 0; i < time; i++) {
-            long myRecord = (time - i) * i;
-            if (myRecord > record) {
-                minimumTime = i;
-                break;
-            }
-        }
-
-        for (long i = time; i >= 0; i--) {
-            long myRecord = (time - i) * i;
-            if (myRecord > record) {
-                maximumTime = i + 1;
-                break;
-            }
-        }
-
-        System.out.println(maximumTime - minimumTime);
     }
 }
