@@ -1,34 +1,13 @@
-package year2023;
-
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 
-public class Day9 {
+public class Day9_2 {
 
     public static void main(String[] args) throws IOException {
-        //Part one
-        List<String> lines = Utils.readLines(Path.of("src/year2023/files/09.txt"));
+        List<String> lines = Files.readAllLines(Paths.get(args[0]));
         int result = 0;
-
-        for (String line : lines) {
-            List<Integer> input = readInput(line);
-            List<List<Integer>> history = readHistory(input);
-            history.get(history.size() - 1).add(0);
-
-            for (int i = history.size() - 2; i >= 0; i--) {
-                List<Integer> list = history.get(i);
-                list.add(Utils.last(history.get(i+1)) + Utils.last(history.get(i)));
-            }
-
-            result += Utils.last(history.get(0));
-        }
-
-        System.out.println(result);
-
-
-        //Part two
-        result = 0;
 
         for (String line : lines) {
             List<Integer> input = readInput(line);
@@ -37,7 +16,7 @@ public class Day9 {
 
             for (int i = history.size() - 2; i >= 0; i--) {
                 List<Integer> list = history.get(i);
-                list.add(0, history.get(i).get(0) - history.get(i+1).get(0));
+                list.add(0, history.get(i).get(0) - history.get(i + 1).get(0));
             }
 
             result += history.get(0).get(0);
@@ -64,7 +43,7 @@ public class Day9 {
             List<Integer> mappedList = new ArrayList<>();
 
             for (int i = 0; i < input.size() - 1; i++) {
-                mappedList.add(input.get(i+1) - input.get(i));
+                mappedList.add(input.get(i + 1) - input.get(i));
             }
 
             input = mappedList;
